--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -12,41 +12,31 @@
     "@klicker-uzh/prisma": "workspace:*"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "8.2.4",
     "@types/node": "^20.16.1",
     "@types/ramda": "^0.29.3",
     "autoprefixer": "10.4.14",
     "cross-env": "7.0.3",
     "eslint": "8.45.0",
     "npm-run-all": "4.1.5",
-    "size-limit": "8.2.4",
-    "tsup": "7.2.0",
-    "typescript": "5.4.5"
+    "tsup": "8.3.0",
+    "typescript": "5.6.2"
   },
   "peerDependencies": {
     "ramda": "0.29.0"
   },
   "scripts": {
-    "analyze": "size-limit --why",
     "build": "run-s build:ts",
     "build:ts": "cross-env NODE_ENV=production tsup",
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "run-p dev:ts",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
-    "dev:ts": "cross-env NODE_ENV=development tsup --watch",
-    "size": "size-limit"
+    "dev:ts": "cross-env NODE_ENV=development tsup --watch"
   },
   "engines": {
     "node": "=20"
   },
   "volta": {
     "extends": "../../package.json"
-  },
-  "size-limit": [
-    {
-      "path": "dist/index.js",
-      "limit": "10 KB"
-    }
-  ]
+  }
 }
