--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -14,11 +14,11 @@
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/util": "workspace:*",
-    "@pothos/core": "3.38.0",
-    "@pothos/plugin-directives": "3.10.2",
-    "@pothos/plugin-prisma": "3.60.0",
-    "@pothos/plugin-scope-auth": "3.20.0",
-    "@pothos/plugin-validation": "3.10.0",
+    "@pothos/core": "4.2.0",
+    "@pothos/plugin-directives": "4.1.0",
+    "@pothos/plugin-prisma": "4.2.1",
+    "@pothos/plugin-scope-auth": "4.1.0",
+    "@pothos/plugin-zod": "4.1.0",
     "axios": "1.4.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.12",
@@ -38,15 +38,15 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/fragment-matcher": "5.0.0",
-    "@graphql-codegen/introspection": "4.0.0",
-    "@graphql-codegen/schema-ast": "4.0.0",
-    "@graphql-codegen/typed-document-node": "5.0.1",
-    "@graphql-codegen/typescript": "4.0.1",
-    "@graphql-codegen/typescript-operations": "4.0.1",
-    "@graphql-codegen/typescript-resolvers": "4.0.1",
-    "@graphql-tools/utils": "10.0.6",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/fragment-matcher": "5.0.2",
+    "@graphql-codegen/introspection": "4.0.3",
+    "@graphql-codegen/schema-ast": "4.1.0",
+    "@graphql-codegen/typed-document-node": "5.0.9",
+    "@graphql-codegen/typescript": "4.0.9",
+    "@graphql-codegen/typescript-operations": "4.2.3",
+    "@graphql-codegen/typescript-resolvers": "4.2.1",
+    "@graphql-tools/utils": "10.5.4",
     "@graphql-typed-document-node/core": "3.2.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@parcel/watcher": "2.2.0",
