--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "5.19.1",
     "cross-env": "7.0.3",
-    "eslint-config-prettier": "9.1.0",
+    "husky": "9.1.6",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.0.0",
     "prettier-plugin-tailwindcss": "0.6.6",
     "standard-version": "9.5.0",
-    "syncpack": "11.2.1",
-    "turbo": "2.1.0",
+    "syncpack": "13.0.0",
+    "turbo": "2.1.2",
     "typescript": "5.6.2",
     "yaml": "2.3.2"
   },
@@ -54,7 +54,7 @@
     "format": "prettier --write . --config .prettierrc.mjs",
     "format:check": "prettier --check . --config .prettierrc.mjs",
     "lint": "turbo run lint --parallel --continue",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prisma:deploy": "pnpm run --filter @klicker-uzh/prisma prisma:deploy",
     "prisma:migrate": "pnpm run --filter @klicker-uzh/prisma prisma:migrate",
     "prisma:reset": "pnpm run --filter @klicker-uzh/prisma prisma:reset",
