--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@prisma/nextjs-monorepo-workaround-plugin": "5.19.1",
     "cross-env": "7.0.3",
     "husky": "9.1.6",
+    "lint-staged": "15.2.10",
+    "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.0.0",
     "prettier-plugin-tailwindcss": "0.6.6",
@@ -39,15 +41,17 @@
     "yaml": "2.3.2"
   },
   "scripts": {
-    "release": "standard-version",
-    "release:dry": "standard-version --dry-run",
     "build": "turbo run build",
     "build:test": "cross-env NODE_ENV=test turbo run build:test --cache-dir=.turbo",
-    "check": "turbo run check --parallel --continue",
+    "check": "run-p check:*",
+    "check:app": "turbo run check --parallel --continue",
+    "check:format": "lint-staged",
+    "check:lint": "turbo run lint --parallel --continue",
+    "check:syncpack": "syncpack lint",
     "dev": "doppler run --config dev -- turbo run dev --concurrency 30",
+    "dev:cleverreach": "doppler run --config dev_cleverreach -- turbo run dev --concurrency 30",
     "dev:docs": "doppler run --config dev -- turbo run dev:docs",
     "dev:lti": "doppler run --config dev_lti -- turbo run dev:lti",
-    "dev:cleverreach": "doppler run --config dev_cleverreach -- turbo run dev --concurrency 30",
     "dev:migration": "doppler run --config dev -- turbo run dev:migration",
     "dev:offline": "doppler run --config dev -- turbo run dev:offline",
     "dev:test": "cross-env NODE_ENV=test turbo run dev:test",
@@ -63,10 +67,12 @@
     "prisma:studio": "pnpm run --filter @klicker-uzh/prisma prisma:studio",
     "prune": "turbo prune",
     "publish": "turbo run publish",
+    "release": "standard-version",
     "release:alpha": "standard-version --prerelease alpha --no-verify",
     "release:alpha:dry": "standard-version --dry-run --prerelease alpha",
     "release:beta": "standard-version --prerelease beta --no-verify",
     "release:beta:dry": "standard-version --dry-run --prerelease beta",
+    "release:dry": "standard-version --dry-run",
     "release:rc": "standard-version --prerelease rc --no-verify",
     "release:rc:dry": "standard-version --dry-run --prerelease rc",
     "start": "turbo run start",
