--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -2,7 +2,6 @@
   "name": "@klicker-uzh/backend-docker",
   "version": "3.2.0-alpha.31",
   "license": "AGPL-3.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -76,26 +75,27 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production run-s build:ts",
-    "build:ts": "tsup",
-    "build:test": "run-s build:instrument build:ts",
     "build:instrument": "nyc instrument --compact=false src instrumented",
+    "build:test": "run-s build:instrument build:ts",
+    "build:ts": "tsup",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:build dev:run",
-    "dev:lti": "pnpm run dev",
-    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:build": "tsup --watch",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
+    "dev:lti": "pnpm run dev",
     "dev:offline": "pnpm run dev",
-    "dev:test": "cross-env NODE_ENV=test pnpm run dev",
     "dev:run": "nodemon -w dist/ -w '../../packages/graphql/dist' --exec 'node --env-file=.env ./dist/index.js'",
-    "start": "node -r dotenv/config dist/index.js",
-    "start:test": "nyc --silent node -r dotenv/config dist/index.js",
+    "dev:test": "cross-env NODE_ENV=test pnpm run dev",
     "script": "doppler run --config dev -- tsx",
-    "script:prod": "doppler run --config prd -- tsx"
+    "script:prod": "doppler run --config prd -- tsx",
+    "start": "node -r dotenv/config dist/index.js",
+    "start:test": "nyc --silent node -r dotenv/config dist/index.js"
   },
   "engines": {
     "node": "=20"
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "type": "module"
 }
