--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -2,7 +2,6 @@
   "name": "@klicker-uzh/grading",
   "version": "3.2.0-alpha.31",
   "license": "AGPL-3.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -36,5 +35,6 @@
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "type": "module"
 }
