--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -2,7 +2,6 @@
   "name": "@klicker-uzh/markdown",
   "version": "3.2.0-alpha.31",
   "license": "AGPL-3.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -50,11 +49,11 @@
   "scripts": {
     "analyze": "size-limit --why",
     "build": "run-s build:tw build:ts",
+    "build:test": "pnpm run build",
     "build:ts": "cross-env NODE_ENV=production tsup",
     "build:tw": "run-p build:tw:*",
     "build:tw:components": "tailwindcss -i src/components.css -o src/public/components.css",
     "build:tw:utilities": "tailwindcss -i src/utilities.css -o src/public/utilities.css",
-    "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "run-p dev:tw:* dev:ts",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
@@ -75,5 +74,6 @@
       "path": "dist/index.js",
       "limit": "10 KB"
     }
-  ]
+  ],
+  "type": "module"
 }
