no more type issues in prisma package

--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -1,6 +1,13 @@
 {
-  "include": ["./**/*"],
-  "exclude": ["node_modules", "dist", "instrumented", "src/scripts"],
+  "include": [
+    "./**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "instrumented",
+    "src/scripts"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "rootDir": ".",
@@ -27,7 +34,10 @@
     "composite": false,
     "declarationMap": true,
     /* If your code doesn't run in the DOM: */
-    "lib": ["es2022"],
-    "noErrorTruncation": true
+    "lib": [
+      "es2022"
+    ],
+    "noErrorTruncation": true,
+    // "preserveSymlinks": true
   }
 }
