--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -1,5 +1,7 @@
 {
-  "include": ["**/**/*"],
+  "include": [
+    "**/**/*"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
@@ -25,8 +27,14 @@
     "composite": true,
     "declarationMap": true,
     /* If your code doesn't run in the DOM: */
-    "lib": ["es2022"],
+    "lib": [
+      "es2022"
+    ],
     "rootDir": "."
   },
-  "exclude": ["src/client", "src/scripts", "dist"]
+  "exclude": [
+    "src/prisma/client",
+    "src/scripts",
+    "dist"
+  ]
 }
