--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -34,9 +34,9 @@
     "next-intl": "3.18.1",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
-    "ramda": "0.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "remeda": "2.14.0",
     "sharp": "0.32.4",
     "tailwind-merge": "2.4.0",
     "yup": "1.2.0"
