wip: eliminate ramda from frontend-manage

--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -38,7 +38,6 @@
     "next-intl": "3.18.1",
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
-    "ramda": "0.29.0",
     "react": "18.3.1",
     "react-csv-downloader": "3.1.0",
     "react-d3-speedometer": "2.2.1",
@@ -53,6 +52,7 @@
     "react-tagcloud": "2.3.1",
     "recharts": "2.7.2",
     "remark-slate": "1.8.6",
+    "remeda": "2.14.0",
     "sharp": "0.32.4",
     "slate": "0.94.1",
     "slate-history": "0.93.0",
@@ -71,7 +71,6 @@
     "@types/js-search": "^1.4.0",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.16.1",
-    "@types/ramda": "^0.29.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/react-tagcloud": "^1.1.7",
