--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -42,10 +42,10 @@
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "object-hash": "3.0.0",
-    "ramda": "0.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "2.7.2",
+    "remeda": "2.14.0",
     "sharp": "0.32.4",
     "tailwind-merge": "2.4.0",
     "yup": "1.2.0"
@@ -60,7 +60,6 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.16.1",
     "@types/object-hash": "^3.0.2",
-    "@types/ramda": "^0.29.3",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/web-push": "^3.6.3",
