--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -2,6 +2,7 @@
   "name": "@klicker-uzh/markdown",
   "version": "3.2.0-alpha.31",
   "license": "AGPL-3.0",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -74,6 +75,5 @@
       "path": "dist/index.js",
       "limit": "10 KB"
     }
-  ],
-  "type": "module"
+  ]
 }
