--- a/apps/lti/tsconfig.json
+++ b/apps/lti/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "include": [
-    "**/**/*"
-  ],
+  "include": ["**/**/*"],
   "compilerOptions": {
     /* Base Options: */
     "esModuleInterop": true,
@@ -21,8 +19,6 @@
     "outDir": "dist",
     "sourceMap": true,
     /* If your code doesn't run in the DOM: */
-    "lib": [
-      "es2022"
-    ]
+    "lib": ["es2022"]
   }
 }
