--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -56,6 +56,7 @@ cron:
   dailyGroupScores: "* * * * *" # runs every minute - overridden in deployment config
   pushNotifications: "*/5 * * * *" # runs every 5 minutes
   practiceQuizPublications: "*/5 * * * *" # runs every 5 minutes
+  microLearningPublications: "*/5 * * * *" # runs every 5 minutes
   runningRandomGroups: "5 0 * * *" # running at midnight
   finalRandomGroups: "5 0 * * *" # running at midnight
   token: ""
