wip: extend cypress coverage by testing password changes

--- a/apps/auth/.env.test
+++ b/apps/auth/.env.test
@@ -5,5 +5,5 @@ EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid-test
 NEXT_PUBLIC_DEFAULT_REDIRECT=http://127.0.0.1:3002
 DATABASE_URL=postgres://klicker:klicker@localhost:5432/klicker-prod
-APP_SECRET=abcd
+APP_SECRET=abcdabcd
 NEXT_PUBLIC_AUTH_URL=http://127.0.0.1:3010
