--- a/cypress/package.json
+++ b/cypress/package.json
@@ -10,7 +10,8 @@
     "cypress": "13.13.2",
     "jsonwebtoken": "8.5.1",
     "typescript": "5.4.5",
-    "uuid": "9.0.1"
+    "uuid": "9.0.1",
+    "cypress-real-events": "1.13.0"
   },
   "scripts": {
     "test": "cypress open",
