--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,7 +3,12 @@
     "baseUrl": ".",
     "target": "es5",
     "lib": ["es5", "dom"],
-    "types": ["cypress", "node", "@testing-library/cypress"],
+    "types": [
+      "cypress",
+      "node",
+      "@testing-library/cypress",
+      "cypress-real-events"
+    ],
     "resolveJsonModule": true
   },
   "include": ["**/*.ts"]
