--- a/deploy/charts/klicker-uzh-v2/templates/cron-async-activity-publications.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cron-async-activity-publications.yaml
@@ -1,11 +1,11 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ include "chart.fullname" . }}-cron-practice-pubs
+  name: {{ include "chart.fullname" . }}-cron-activity-pubs
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 spec:
-  schedule: {{ .Values.cron.practiceQuizPublications | quote }}
+  schedule: {{ .Values.cron.activityPublications | quote }}
   jobTemplate:
     spec:
       template:
@@ -22,16 +22,16 @@ spec:
             - -H
             - "x-token: {{ .Values.cron.token }}"
             - -H
-            - "x-graphql-yoga-csrf: PublishScheduledPracticeQuizzes"
+            - "x-graphql-yoga-csrf: PublishScheduledActivities"
             - -d
             - >
                 {
-                    "operationName": "PublishScheduledPracticeQuizzes",
+                    "operationName": "PublishScheduledActivities",
                     "variables": {},
                     "extensions": {
                         "persistedQuery": {
                             "version": 1,
-                            "sha256Hash": "00c2398a3fc6f182c85f064913a7f43bddbd21762b827ade88b446bcef5e3c12"
+                            "sha256Hash": "fa95285ce30b364b49ed276d38bc68d5edccc4e2b89e7903814e7233aacd6040"
                         }
                     }
                 }
