--- a/apps/func-response-processor/package.json
+++ b/apps/func-response-processor/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@klicker-uzh/func-response-processor",
-  "version": "3.2.0-rc.5",
+  "version": "3.2.0",
   "license": "AGPL-3.0",
   "main": "dist/index.js",
   "files": [
