--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@klicker-uzh/docs",
-  "version": "3.2.0",
+  "version": "3.3.0-alpha.0",
   "license": "AGPL-3.0",
   "dependencies": {
     "@docusaurus/core": "3.5.2",
