--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@klicker-uzh/graphql",
-  "version": "3.2.0",
+  "version": "3.3.0-alpha.0",
   "license": "AGPL-3.0",
   "type": "module",
   "main": "dist/index.js",
