--- a/cypress/package.json
+++ b/cypress/package.json
@@ -8,10 +8,10 @@
     "@types/node": "^20.16.1",
     "@types/uuid": "^9.0.8",
     "cypress": "13.13.2",
+    "cypress-real-events": "1.13.0",
     "jsonwebtoken": "8.5.1",
     "typescript": "5.6.2",
-    "uuid": "9.0.1",
-    "cypress-real-events": "1.13.0"
+    "uuid": "9.0.1"
   },
   "scripts": {
     "test": "cypress open",
