--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -17,7 +17,7 @@
     "@klicker-uzh/shared-components": "workspace:*",
     "@sentry/nextjs": "7.61.1",
     "@socialgouv/matomo-next": "1.6.1",
-    "@types/js-cookie": "^3.0.3",
+    "@types/js-cookie": "3.0.3",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
     "body-parser": "1.20.2",
     "cross-env": "7.0.3",
@@ -36,33 +36,33 @@
     "nookies": "2.5.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "remeda": "2.14.0",
+    "remeda": "2.15.0",
     "sharp": "0.32.4",
     "tailwind-merge": "2.4.0",
     "yup": "1.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.4",
-    "@tailwindcss/typography": "0.5.9",
+    "@tailwindcss/aspect-ratio": "~0.4.2",
+    "@tailwindcss/forms": "~0.5.4",
+    "@tailwindcss/typography": "~0.5.9",
     "@types/body-parser": "^1.19.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/web-push": "^3.6.3",
-    "autoprefixer": "10.4.14",
-    "babel-loader": "9.1.2",
-    "cross-env": "7.0.3",
-    "cssnano": "6.0.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "14.2.7",
-    "postcss": "8.4.41",
-    "postcss-import": "16.1.0",
-    "tailwindcss": "3.4.9",
-    "tailwindcss-radix": "3.0.3",
-    "ts-node": "10.9.1",
-    "typescript": "5.6.2"
+    "autoprefixer": "~10.4.14",
+    "babel-loader": "~9.1.2",
+    "cross-env": "~7.0.3",
+    "cssnano": "~6.0.1",
+    "eslint": "~8.45.0",
+    "eslint-config-next": "~14.2.7",
+    "postcss": "~8.4.41",
+    "postcss-import": "~16.1.0",
+    "tailwindcss": "~3.4.9",
+    "tailwindcss-radix": "~3.0.3",
+    "ts-node": "~10.9.1",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "next build",
