--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -52,7 +52,7 @@
     "react-tagcloud": "2.3.1",
     "recharts": "2.7.2",
     "remark-slate": "1.8.6",
-    "remeda": "2.14.0",
+    "remeda": "2.15.0",
     "sharp": "0.32.4",
     "slate": "0.94.1",
     "slate-history": "0.93.0",
@@ -61,10 +61,10 @@
     "yup": "1.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/container-queries": "0.1.1",
-    "@tailwindcss/forms": "0.5.4",
-    "@tailwindcss/typography": "0.5.9",
+    "@tailwindcss/aspect-ratio": "~0.4.2",
+    "@tailwindcss/container-queries": "~0.1.1",
+    "@tailwindcss/forms": "~0.5.4",
+    "@tailwindcss/typography": "~0.5.9",
     "@types/d3": "^7.4.0",
     "@types/is-hotkey": "^0.1.10",
     "@types/js-cookie": "^3.0.3",
@@ -74,17 +74,17 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/react-tagcloud": "^1.1.7",
-    "autoprefixer": "10.4.14",
-    "babel-loader": "9.1.2",
-    "cross-env": "7.0.3",
-    "cssnano": "6.0.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "14.2.7",
-    "postcss": "8.4.41",
-    "postcss-import": "16.1.0",
-    "tailwindcss": "3.4.9",
-    "tailwindcss-radix": "3.0.3",
-    "typescript": "5.6.2"
+    "autoprefixer": "~10.4.14",
+    "babel-loader": "~9.1.2",
+    "cross-env": "~7.0.3",
+    "cssnano": "~6.0.1",
+    "eslint": "~8.45.0",
+    "eslint-config-next": "~14.2.7",
+    "postcss": "~8.4.41",
+    "postcss-import": "~16.1.0",
+    "tailwindcss": "~3.4.9",
+    "tailwindcss-radix": "~3.0.3",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "next build",
