--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -45,16 +45,16 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "2.7.2",
-    "remeda": "2.14.0",
+    "remeda": "2.15.0",
     "sharp": "0.32.4",
     "tailwind-merge": "2.4.0",
     "yup": "1.2.0"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.3.0",
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.4",
-    "@tailwindcss/typography": "0.5.9",
+    "@capacitor/cli": "~5.3.0",
+    "@tailwindcss/aspect-ratio": "~0.4.2",
+    "@tailwindcss/forms": "~0.5.4",
+    "@tailwindcss/typography": "~0.5.9",
     "@types/body-parser": "^1.19.2",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.6",
@@ -63,19 +63,19 @@
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/web-push": "^3.6.3",
-    "autoprefixer": "10.4.14",
-    "babel-loader": "9.1.2",
-    "cross-env": "7.0.3",
-    "cssnano": "6.0.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "14.2.7",
-    "postcss": "8.4.41",
-    "postcss-import": "16.1.0",
-    "tailwindcss": "3.4.9",
-    "tailwindcss-radix": "3.0.3",
-    "ts-node": "10.9.1",
-    "typescript": "5.6.2",
-    "web-push": "3.6.7"
+    "autoprefixer": "~10.4.14",
+    "babel-loader": "~9.1.2",
+    "cross-env": "~7.0.3",
+    "cssnano": "~6.0.1",
+    "eslint": "~8.45.0",
+    "eslint-config-next": "~14.2.7",
+    "postcss": "~8.4.41",
+    "postcss-import": "~16.1.0",
+    "tailwindcss": "~3.4.9",
+    "tailwindcss-radix": "~3.0.3",
+    "ts-node": "~10.9.1",
+    "typescript": "~5.6.3",
+    "web-push": "~3.6.7"
   },
   "scripts": {
     "build": "next build",
