--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -13,11 +13,11 @@
     "yup": "1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.21.8",
-    "@babel/preset-typescript": "7.21.5",
-    "@tailwindcss/aspect-ratio": "0.4.2",
-    "@tailwindcss/forms": "0.5.4",
-    "@tailwindcss/typography": "0.5.9",
+    "@babel/core": "~7.21.8",
+    "@babel/preset-typescript": "~7.21.5",
+    "@tailwindcss/aspect-ratio": "~0.4.2",
+    "@tailwindcss/forms": "~0.5.4",
+    "@tailwindcss/typography": "~0.5.9",
     "@types/node": "^20.16.1",
     "@types/office-js": "^1.0.256",
     "@types/office-runtime": "^1.0.23",
@@ -25,34 +25,34 @@
     "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.0.0",
     "@types/webpack-dev-server": "^4.1.0",
-    "acorn": "8.8.2",
-    "autoprefixer": "10.4.14",
-    "babel-loader": "9.1.2",
-    "copy-webpack-plugin": "11.0.0",
-    "eslint": "8.45.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-office-addins": "2.1.5",
-    "eslint-plugin-react": "7.32.2",
-    "file-loader": "6.2.0",
-    "html-loader": "4.2.0",
-    "html-webpack-plugin": "5.5.1",
-    "npm-run-all": "4.1.5",
-    "office-addin-cli": "1.5.5",
-    "office-addin-debugging": "5.0.9",
-    "office-addin-dev-certs": "1.11.4",
-    "office-addin-lint": "2.2.5",
-    "office-addin-manifest": "1.12.4",
-    "os-browserify": "0.3.0",
-    "postcss": "8.4.41",
-    "process": "0.11.10",
-    "source-map-loader": "4.0.1",
-    "tailwindcss": "3.4.9",
-    "tailwindcss-radix": "3.0.3",
-    "ts-loader": "9.4.2",
-    "typescript": "5.6.2",
-    "webpack": "5.83.1",
-    "webpack-cli": "5.1.1",
-    "webpack-dev-server": "4.15.0"
+    "acorn": "~8.8.2",
+    "autoprefixer": "~10.4.14",
+    "babel-loader": "~9.1.2",
+    "copy-webpack-plugin": "~11.0.0",
+    "eslint": "~8.45.0",
+    "eslint-config-prettier": "~9.1.0",
+    "eslint-plugin-office-addins": "~2.1.5",
+    "eslint-plugin-react": "~7.32.2",
+    "file-loader": "~6.2.0",
+    "html-loader": "~4.2.0",
+    "html-webpack-plugin": "~5.5.1",
+    "npm-run-all": "~4.1.5",
+    "office-addin-cli": "~1.5.5",
+    "office-addin-debugging": "~5.0.9",
+    "office-addin-dev-certs": "~1.11.4",
+    "office-addin-lint": "~2.2.5",
+    "office-addin-manifest": "~1.12.4",
+    "os-browserify": "~0.3.0",
+    "postcss": "~8.4.41",
+    "process": "~0.11.10",
+    "source-map-loader": "~4.0.1",
+    "tailwindcss": "~3.4.9",
+    "tailwindcss-radix": "~3.0.3",
+    "ts-loader": "~9.4.2",
+    "typescript": "~5.6.3",
+    "webpack": "~5.83.1",
+    "webpack-cli": "~5.1.1",
+    "webpack-dev-server": "~4.15.0"
   },
   "scripts": {
     "//lint": "office-addin-lint check",
