--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -30,25 +30,25 @@
     "mongodb": "5.7.0",
     "node-schedule": "2.1.1",
     "nodemailer": "6.9.14",
-    "remeda": "2.14.0",
+    "remeda": "2.15.0",
     "unique-names-generator": "4.7.1",
     "uuid": "9.0.1",
     "validator": "13.11.0",
     "zod": "3.21.4"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/fragment-matcher": "5.0.2",
-    "@graphql-codegen/introspection": "4.0.3",
-    "@graphql-codegen/schema-ast": "4.1.0",
-    "@graphql-codegen/typed-document-node": "5.0.9",
-    "@graphql-codegen/typescript": "4.0.9",
-    "@graphql-codegen/typescript-operations": "4.2.3",
-    "@graphql-codegen/typescript-resolvers": "4.2.1",
-    "@graphql-tools/utils": "10.5.4",
-    "@graphql-typed-document-node/core": "3.2.0",
-    "@istanbuljs/nyc-config-typescript": "1.0.2",
-    "@parcel/watcher": "2.2.0",
+    "@graphql-codegen/cli": "~5.0.2",
+    "@graphql-codegen/fragment-matcher": "~5.0.2",
+    "@graphql-codegen/introspection": "~4.0.3",
+    "@graphql-codegen/schema-ast": "~4.1.0",
+    "@graphql-codegen/typed-document-node": "~5.0.9",
+    "@graphql-codegen/typescript": "~4.0.9",
+    "@graphql-codegen/typescript-operations": "~4.2.3",
+    "@graphql-codegen/typescript-resolvers": "~4.2.1",
+    "@graphql-tools/utils": "~10.5.4",
+    "@graphql-typed-document-node/core": "~3.2.0",
+    "@istanbuljs/nyc-config-typescript": "~1.0.2",
+    "@parcel/watcher": "~2.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
@@ -59,19 +59,19 @@
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.9.0",
     "@types/web-push": "^3.6.3",
-    "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
-    "eslint": "8.45.0",
-    "graphql-codegen-persisted-query-ids": "0.2.0",
-    "ioredis": "5.4.1",
-    "jest": "29.5.0",
-    "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
-    "ts-jest": "29.1.0",
-    "tsup": "8.3.0",
-    "tsx": "4.19.1",
-    "typescript": "5.6.2",
-    "web-push": "3.6.7"
+    "cross-env": "~7.0.3",
+    "dotenv": "~16.4.5",
+    "eslint": "~8.45.0",
+    "graphql-codegen-persisted-query-ids": "~0.2.0",
+    "ioredis": "~5.4.1",
+    "jest": "~29.5.0",
+    "npm-run-all": "~4.1.5",
+    "nyc": "~15.1.0",
+    "ts-jest": "~29.1.0",
+    "tsup": "~8.3.0",
+    "tsx": "~4.19.1",
+    "typescript": "~5.6.3",
+    "web-push": "~3.6.7"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production run-s generate build:ts",
