--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -30,16 +30,16 @@
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "10.4.14",
-    "cross-env": "7.0.3",
-    "cssnano": "6.0.1",
-    "eslint": "8.45.0",
-    "eslint-config-next": "14.2.7",
-    "postcss": "8.4.41",
-    "postcss-import": "16.1.0",
-    "prisma": "5.19.1",
-    "tailwindcss": "3.4.9",
-    "typescript": "5.6.2"
+    "autoprefixer": "~10.4.14",
+    "cross-env": "~7.0.3",
+    "cssnano": "~6.0.1",
+    "eslint": "~8.45.0",
+    "eslint-config-next": "~14.2.7",
+    "postcss": "~8.4.41",
+    "postcss-import": "~16.1.0",
+    "prisma": "~5.19.1",
+    "tailwindcss": "~3.4.9",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "next build",
