--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -42,8 +42,8 @@
     "ws": "8.13.0"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.12.44",
-    "@istanbuljs/nyc-config-typescript": "1.0.2",
+    "@cypress/code-coverage": "~3.12.44",
+    "@istanbuljs/nyc-config-typescript": "~1.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.17",
@@ -55,21 +55,21 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/ws": "^8.5.9",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "axios": "1.4.0",
-    "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
-    "eslint": "8.45.0",
-    "ioredis-mock": "8.7.0",
-    "jest": "29.5.0",
-    "nodemon": "3.0.1",
-    "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
-    "prisma": "5.19.1",
-    "source-map-support": "0.5.21",
-    "ts-node": "10.9.1",
-    "tsup": "8.3.0",
-    "tsx": "4.19.1",
-    "typescript": "5.6.2"
+    "axios": "~1.4.0",
+    "cross-env": "~7.0.3",
+    "dotenv": "~16.4.5",
+    "eslint": "~8.45.0",
+    "ioredis-mock": "~8.7.0",
+    "jest": "~29.5.0",
+    "nodemon": "~3.0.1",
+    "npm-run-all": "~4.1.5",
+    "nyc": "~15.1.0",
+    "prisma": "~5.19.1",
+    "source-map-support": "~0.5.21",
+    "ts-node": "~10.9.1",
+    "tsup": "~8.3.0",
+    "tsx": "~4.19.1",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production run-s build:ts",
