--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -30,18 +30,18 @@
     "postcss": "8.4.41",
     "postcss-import": "16.1.0",
     "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "4.0.0",
-    "prettier-plugin-tailwindcss": "0.6.6",
+    "prettier-plugin-organize-imports": "4.1.0",
+    "prettier-plugin-tailwindcss": "0.6.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-medium-image-zoom": "4.4.3",
-    "react-text-transition": "^3.1.0",
+    "react-text-transition": "3.1.0",
     "recharts": "2.7.2",
     "rehype-katex": "7.0.1",
     "remark-math": "6.0.0",
     "tailwind-merge": "2.4.0",
     "tailwindcss": "3.4.9",
-    "typescript": "5.6.2"
+    "typescript": "5.6.3"
   },
   "scripts": {
     "build": "docusaurus build",
