--- a/apps/func-migration-v3-import/package.json
+++ b/apps/func-migration-v3-import/package.json
@@ -17,18 +17,18 @@
     "uuid": "9.0.1"
   },
   "devDependencies": {
-    "@tsconfig/node18": "18.2.0",
+    "@tsconfig/node18": "~18.2.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.16.1",
     "@types/uuid": "^9.0.8",
-    "azure-functions-core-tools": "4.0.5907",
-    "cross-env": "7.0.3",
-    "eslint": "8.45.0",
-    "npm-run-all": "4.1.5",
-    "prisma": "5.19.1",
-    "ts-node": "10.9.1",
-    "tsup": "8.3.0",
-    "typescript": "5.6.2"
+    "azure-functions-core-tools": "~4.0.6280",
+    "cross-env": "~7.0.3",
+    "eslint": "~8.45.0",
+    "npm-run-all": "~4.1.5",
+    "prisma": "~5.19.1",
+    "ts-node": "~10.9.1",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
