--- a/apps/lti/package.json
+++ b/apps/lti/package.json
@@ -16,10 +16,10 @@
   "devDependencies": {
     "@types/ltijs": "^4.0.11",
     "@types/node": "^20.16.1",
-    "nodemon": "3.0.1",
-    "npm-run-all": "4.1.5",
-    "tsup": "8.3.0",
-    "typescript": "5.6.2"
+    "nodemon": "~3.0.1",
+    "npm-run-all": "~4.1.5",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production pnpm run build:ts",
