--- a/cypress/package.json
+++ b/cypress/package.json
@@ -2,16 +2,16 @@
   "private": true,
   "name": "@klicker-uzh/cypress",
   "devDependencies": {
-    "@cypress/code-coverage": "3.12.44",
-    "@testing-library/cypress": "10.0.2",
+    "@cypress/code-coverage": "~3.12.44",
+    "@testing-library/cypress": "~10.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.16.1",
     "@types/uuid": "^9.0.8",
-    "cypress": "13.13.2",
-    "cypress-real-events": "1.13.0",
-    "jsonwebtoken": "8.5.1",
-    "typescript": "5.6.2",
-    "uuid": "9.0.1"
+    "cypress": "~13.13.2",
+    "cypress-real-events": "~1.13.0",
+    "jsonwebtoken": "~9.0.2",
+    "typescript": "~5.6.3",
+    "uuid": "~9.0.1"
   },
   "scripts": {
     "test": "cypress open",
