--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
     "Bulin Shaqiri <bulin.shaqiri@bf.uzh.ch>"
   ],
   "devDependencies": {
-    "@prisma/nextjs-monorepo-workaround-plugin": "5.19.1",
-    "cross-env": "7.0.3",
-    "husky": "9.1.6",
-    "lint-staged": "15.2.10",
-    "npm-run-all": "4.1.5",
-    "prettier": "3.3.3",
-    "prettier-plugin-organize-imports": "4.1.0",
-    "prettier-plugin-tailwindcss": "0.6.8",
-    "standard-version": "9.5.0",
-    "syncpack": "13.0.0",
-    "turbo": "2.1.3",
-    "typescript": "5.6.3",
-    "yaml": "2.6.0"
+    "@prisma/nextjs-monorepo-workaround-plugin": "~5.19.1",
+    "cross-env": "~7.0.3",
+    "husky": "~9.1.6",
+    "lint-staged": "~15.2.10",
+    "npm-run-all": "~4.1.5",
+    "prettier": "~3.3.3",
+    "prettier-plugin-organize-imports": "~4.1.0",
+    "prettier-plugin-tailwindcss": "~0.6.8",
+    "standard-version": "~9.5.0",
+    "syncpack": "~13.0.0",
+    "turbo": "~2.1.3",
+    "typescript": "~5.6.3",
+    "yaml": "~2.6.0"
   },
   "scripts": {
     "//check:syncpack": "syncpack lint",
