--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -8,17 +8,17 @@
     "dist"
   ],
   "dependencies": {
-    "remeda": "2.14.0"
+    "remeda": "2.15.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/node": "^20.16.1",
-    "cross-env": "7.0.3",
-    "eslint": "8.45.0",
-    "jest": "29.5.0",
-    "ts-jest": "29.1.0",
-    "tsup": "8.3.0",
-    "typescript": "5.6.2"
+    "cross-env": "~7.0.3",
+    "eslint": "~8.45.0",
+    "jest": "~29.5.0",
+    "ts-jest": "~29.1.0",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
