--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -9,42 +9,42 @@
   ],
   "dependencies": {
     "rehype-external-links": "2.1.0",
-    "rehype-katex": "6.0.3",
+    "rehype-katex": "7.0.1",
     "rehype-prism-plus": "1.5.1",
     "rehype-react": "7.2.0",
     "rehype-sanitize": "5.0.1",
-    "remark-math": "5.1.1",
+    "remark-math": "6.0.0",
     "remark-parse": "10.0.2",
     "remark-rehype": "10.1.0",
     "unified": "10.1.2"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "8.2.4",
+    "@size-limit/preset-small-lib": "~8.2.4",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "10.4.14",
-    "cross-env": "7.0.3",
-    "eslint": "8.45.0",
-    "npm-run-all": "4.1.5",
-    "postcss-import": "16.1.0",
-    "size-limit": "8.2.4",
-    "tailwindcss": "3.4.9",
-    "tailwindcss-radix": "3.0.3",
-    "tsup": "8.3.0",
-    "typescript": "5.6.2"
+    "autoprefixer": "~10.4.14",
+    "cross-env": "~7.0.3",
+    "eslint": "~8.45.0",
+    "npm-run-all": "~4.1.5",
+    "postcss-import": "~16.1.0",
+    "size-limit": "~8.2.4",
+    "tailwindcss": "~3.4.9",
+    "tailwindcss-radix": "~3.0.3",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.6.0",
-    "@fortawesome/free-regular-svg-icons": "6.6.0",
-    "@fortawesome/free-solid-svg-icons": "6.6.0",
-    "@fortawesome/react-fontawesome": "0.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "next": "14.2.7",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tailwind-merge": "2.4.0",
-    "yup": "1.2.0"
+    "next": "^14.2.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "analyze": "size-limit --why",
