--- a/packages/next-config/package.json
+++ b/packages/next-config/package.json
@@ -5,7 +5,7 @@
     "index.js"
   ],
   "peerDependencies": {
-    "next": "14.2.7"
+    "next": "^14.2.7"
   },
   "volta": {
     "extends": "../../package.json"
