--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -12,29 +12,29 @@
   },
   "devDependencies": {
     "@klicker-uzh/transactional": "workspace:*",
-    "@pothos/plugin-prisma": "4.2.1",
+    "@pothos/plugin-prisma": "~4.2.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^20.16.1",
     "@types/turndown": "^5.0.4",
     "@types/uuid": "^9.0.8",
     "@types/xml2js": "^0.4.14",
-    "bcryptjs": "2.4.3",
-    "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
-    "dotenv-cli": "7.2.1",
-    "eslint": "8.45.0",
-    "fs-extra": "11.1.1",
-    "npm-run-all": "4.1.5",
-    "p-map": "7.0.2",
-    "prisma": "5.19.1",
-    "prisma-json-types-generator": "3.0.4",
-    "tsup": "8.3.0",
-    "tsx": "4.19.1",
-    "turndown": "7.1.2",
-    "typescript": "5.6.2",
-    "uuid": "9.0.1",
-    "uuidv4": "6.2.13",
-    "xml2js": "0.6.2"
+    "bcryptjs": "~2.4.3",
+    "cross-env": "~7.0.3",
+    "dotenv": "~16.4.5",
+    "dotenv-cli": "~7.2.1",
+    "eslint": "~8.45.0",
+    "fs-extra": "~11.1.1",
+    "npm-run-all": "~4.1.5",
+    "p-map": "~7.0.2",
+    "prisma": "~5.19.1",
+    "prisma-json-types-generator": "~3.0.4",
+    "tsup": "~8.3.0",
+    "tsx": "~4.19.1",
+    "turndown": "~7.1.2",
+    "typescript": "~5.6.3",
+    "uuid": "~9.0.1",
+    "uuidv4": "~6.2.13",
+    "xml2js": "~0.6.2"
   },
   "peerDependencies": {
     "@klicker-uzh/util": "workspace:*"
