--- a/packages/transactional/package.json
+++ b/packages/transactional/package.json
@@ -5,14 +5,14 @@
     "out"
   ],
   "devDependencies": {
-    "@react-email/components": "0.0.22",
+    "@react-email/components": "~0.0.22",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "react": "18.3.1",
-    "react-email": "2.1.6",
-    "tsx": "4.19.1",
-    "typescript": "5.6.2"
+    "react": "~18.3.1",
+    "react-email": "~2.1.6",
+    "tsx": "~4.19.1",
+    "typescript": "~5.6.3"
   },
   "scripts": {
     "build": "email export -d src/emails",
