--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -12,15 +12,15 @@
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
-    "autoprefixer": "10.4.14",
-    "cross-env": "7.0.3",
-    "eslint": "8.45.0",
-    "npm-run-all": "4.1.5",
-    "tsup": "8.3.0",
-    "typescript": "5.6.2"
+    "autoprefixer": "~10.4.14",
+    "cross-env": "~7.0.3",
+    "eslint": "~8.45.0",
+    "npm-run-all": "~4.1.5",
+    "tsup": "~8.3.0",
+    "typescript": "~5.6.3"
   },
   "peerDependencies": {
-    "remeda": "2.14.0"
+    "remeda": "^2.15.0"
   },
   "scripts": {
     "build": "run-s build:ts",
