--- a/apps/frontend-pwa/tsconfig.json
+++ b/apps/frontend-pwa/tsconfig.json
@@ -30,11 +30,5 @@
     "**/*.tsx",
     "src/utils/generateAvatars.js"
   ],
-  "exclude": ["node_modules"],
-  "ts-node": {
-    "transpileOnly": true,
-    "moduleTypes": {
-      "src/utils/generateAvatars.ts": "esm"
-    }
-  }
+  "exclude": ["node_modules"]
 }
