--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -15,18 +15,16 @@
     "@klicker-uzh/next-config": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
-    "@sentry/nextjs": "7.61.1",
-    "@socialgouv/matomo-next": "1.6.1",
-    "@types/js-cookie": "3.0.3",
+    "@socialgouv/matomo-next": "1.9.1",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "body-parser": "1.20.2",
+    "body-parser": "1.20.3",
     "cross-env": "7.0.3",
-    "dayjs": "1.11.12",
+    "dayjs": "1.11.13",
     "deepmerge": "4.3.1",
     "formik": "2.4.6",
     "graphql": "16.9.0",
     "graphql-codegen-persisted-query-ids": "0.2.0",
-    "graphql-ws": "5.13.1",
+    "graphql-ws": "5.16.0",
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
     "localforage": "1.10.0",
@@ -39,20 +37,21 @@
     "remeda": "2.15.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.5.4",
-    "yup": "1.2.0"
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "~0.4.2",
-    "@tailwindcss/forms": "~0.5.4",
-    "@tailwindcss/typography": "~0.5.9",
+    "@tailwindcss/forms": "~0.5.9",
+    "@tailwindcss/typography": "~0.5.15",
     "@types/body-parser": "^1.19.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/web-push": "^3.6.3",
     "autoprefixer": "~10.4.20",
-    "babel-loader": "~9.1.2",
+    "babel-loader": "~9.2.1",
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
@@ -60,8 +59,7 @@
     "postcss": "~8.4.47",
     "postcss-import": "~16.1.0",
     "tailwindcss": "~3.4.14",
-    "tailwindcss-radix": "~3.0.3",
-    "ts-node": "~10.9.1",
+    "tailwindcss-radix": "~3.0.5",
     "typescript": "~5.6.3"
   },
   "scripts": {
