--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -23,17 +23,17 @@
     "@klicker-uzh/util": "workspace:*",
     "@radix-ui/react-collapsible": "1.0.3",
     "@radix-ui/react-tabs": "1.0.3",
-    "@socialgouv/matomo-next": "1.6.1",
+    "@socialgouv/matomo-next": "1.9.1",
     "@uidotdev/usehooks": "2.4.1",
     "@uzh-bf/design-system": "3.0.0-alpha.32",
-    "body-parser": "1.20.2",
-    "dayjs": "1.11.12",
+    "body-parser": "1.20.3",
+    "dayjs": "1.11.13",
     "deepmerge": "4.3.1",
     "formik": "2.4.6",
     "generate-password": "1.7.0",
     "graphql": "16.9.0",
     "graphql-codegen-persisted-query-ids": "0.2.0",
-    "graphql-ws": "5.13.1",
+    "graphql-ws": "5.16.0",
     "js-cookie": "3.0.5",
     "jsonwebtoken": "9.0.2",
     "localforage": "1.10.0",
@@ -48,13 +48,13 @@
     "remeda": "2.15.0",
     "sharp": "0.33.5",
     "tailwind-merge": "2.5.4",
-    "yup": "1.2.0"
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@capacitor/cli": "~5.3.0",
     "@tailwindcss/aspect-ratio": "~0.4.2",
-    "@tailwindcss/forms": "~0.5.4",
-    "@tailwindcss/typography": "~0.5.9",
+    "@tailwindcss/forms": "~0.5.9",
+    "@tailwindcss/typography": "~0.5.15",
     "@types/body-parser": "^1.19.2",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.6",
@@ -64,7 +64,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/web-push": "^3.6.3",
     "autoprefixer": "~10.4.20",
-    "babel-loader": "~9.1.2",
+    "babel-loader": "~9.2.1",
     "cross-env": "~7.0.3",
     "cssnano": "~6.0.1",
     "eslint": "~8.45.0",
@@ -72,8 +72,8 @@
     "postcss": "~8.4.47",
     "postcss-import": "~16.1.0",
     "tailwindcss": "~3.4.14",
-    "tailwindcss-radix": "~3.0.3",
-    "ts-node": "~10.9.1",
+    "tailwindcss-radix": "~3.0.5",
+    "tsx": "~4.19.1",
     "typescript": "~5.6.3",
     "web-push": "~3.6.7"
   },
@@ -86,7 +86,7 @@
     "dev:lti": "pnpm run dev",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3001",
     "dev:test": "cross-env NODE_ENV=test next dev --port 3001",
-    "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts",
+    "generateAvatars": "tsx src/utils/generateAvatars.ts",
     "lint": "next lint",
     "pushTest": "node src/testPush.js",
     "start": "next start --port 3001",
