--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "yaml": "~2.6.0"
   },
   "scripts": {
-    "//check:syncpack": "syncpack lint",
+    "//check:app": "turbo run check --parallel --continue",
     "build": "turbo run build",
     "build:test": "cross-env NODE_ENV=test turbo run build:test --cache-dir=.turbo",
     "check": "run-p check:*",
-    "//check:app": "turbo run check --parallel --continue",
     "check:format": "lint-staged",
     "check:lint": "turbo run lint --parallel --continue",
+    "check:syncpack": "syncpack lint",
     "dev": "doppler run --config dev -- turbo run dev --concurrency 30",
     "dev:cleverreach": "doppler run --config dev_cleverreach -- turbo run dev --concurrency 30",
     "dev:docs": "turbo run dev:docs",
