--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -19,7 +19,6 @@
     "unified": "10.1.2"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "~8.2.4",
     "@types/node": "^20.16.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
@@ -28,7 +27,6 @@
     "eslint": "~8.45.0",
     "npm-run-all": "~4.1.5",
     "postcss-import": "~16.1.0",
-    "size-limit": "~8.2.4",
     "tailwindcss": "~3.4.14",
     "tailwindcss-radix": "~3.0.5",
     "tsup": "~8.3.0",
@@ -47,7 +45,6 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "analyze": "size-limit --why",
     "build": "run-s build:tw build:ts",
     "build:test": "pnpm run build",
     "build:ts": "cross-env NODE_ENV=production tsup",
@@ -60,8 +57,7 @@
     "dev:offline": "pnpm run dev",
     "dev:ts": "cross-env NODE_ENV=development tsup --watch",
     "dev:tw:components": "tailwindcss -w -i src/components.css -o src/public/components.css",
-    "dev:tw:utilities": "tailwindcss -w -i src/utilities.css -o src/public/utilities.css",
-    "size": "size-limit"
+    "dev:tw:utilities": "tailwindcss -w -i src/utilities.css -o src/public/utilities.css"
   },
   "engines": {
     "node": "=20"
